// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bracket.js - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const {  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns,fitsIn, oneLine} = {}
export {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
};
export {fitsIn, oneLine};

=====================================output=====================================
const {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns,
  fitsIn,
  oneLine,
} = {};
export {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns,
};
export {fitsIn, oneLine};

================================================================================
`;

exports[`bracket.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const {  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns,fitsIn, oneLine} = {}
export {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
};
export {fitsIn, oneLine};

=====================================output=====================================
const {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns,
  fitsIn,
  oneLine,
} = {};
export {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns,
};
export { fitsIn, oneLine };

================================================================================
`;

exports[`empty.js - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export {};
export {} from ".";

=====================================output=====================================
export {};
export {} from ".";

================================================================================
`;

exports[`empty.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export {};
export {} from ".";

=====================================output=====================================
export {};
export {} from ".";

================================================================================
`;

exports[`same-local-and-exported.js - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export {a} from 'a';
export {b as b} from 'b';
export {c as /* comment */c} from 'c';

=====================================output=====================================
export {a} from "a";
export {b as b} from "b";
export {c as /* comment */ c} from "c";

================================================================================
`;

exports[`same-local-and-exported.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export {a} from 'a';
export {b as b} from 'b';
export {c as /* comment */c} from 'c';

=====================================output=====================================
export { a } from "a";
export { b as b } from "b";
export { c as /* comment */ c } from "c";

================================================================================
`;
